<resources>
    <string name="app_name">Customer_Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="BBQ_fragment_label">BBQ Fragment</string>

    //Strings in fragment_first.xml
    <string name="ServerCall">Call Server</string>
    <string name="BBQOrders">BBQ Orders</string>
    <string name="SideDishes">Side Dishes</string>
    <string name="Drinks">Drinks</string>
    <string name="Utensils">Utensils</string>
    <string name="Check">Check</string>
    <string name="previous">Previous</string>


    <string name="activity2_BBQClass">BBQ Orders</string>
    <string name="Next_Activity">second_activity</string>
    <string name="foodType">food</string>
    <string name="Plus_Value">Plus</string>
    <string name="Minus_Value">Minus</string>
    <string name="FoodDescription">TextView</string>
    <string name="activity_sidedishes">Side Dishes</string>
    <string name="activity_drinks">Drinks Activity</string>
    <string name="activity_utensils">Utensil Activity</string>
</resources>
