<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="500dp"
            android:background="#fadcdc"
            android:orientation="vertical"
            android:layout_marginStart="500dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minus"
                    android:layout_width="115dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="75dp"
                    android:text="@string/Minus_Value"
                    android:textColor="#000"
                    android:layout_marginStart="75dp" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="80dp"
                    android:gravity="center_vertical"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:textSize="30sp"
                    android:layout_marginStart="80dp" />

                <Button
                    android:id="@+id/plus"
                    android:layout_width="115dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="80dp"
                    android:text="@string/Plus_Value"
                    android:textColor="#000"
                    android:layout_marginStart="80dp" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:background="#fadcdc"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/food"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/foodType"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:textSize="30sp"
                    android:layout_marginStart="20dp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
